src/objects/Baremo__c.object
<CustomObject>
    <fields>
        <fullName>BAR_LKP_Agrupador_Baremo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agrupador de Baremo</label>
        <referenceTo>Baremo__c</referenceTo>
        <relationshipLabel>Baremos</relationshipLabel>
        <relationshipName>Baremos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BAR_LKP_Compania__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Compañía</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Baremos</relationshipLabel>
        <relationshipName>Baremos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BAR_SEL_Gremio__c</fullName>
        <label>Gremio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BAR_TXT_Codigo_Barra__c</fullName>
        <label>Código de Barras</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAR_TXT_Descripcion_Corta__c</fullName>
        <label>Descripción Corta</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BAR_TXT_Descripcion_Larga__c</fullName>
        <label>Descripción Larga</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BAR_TXT_Identificador_Unico__c</fullName>
        <description>Identificador único que concatena el Gremio_Identificador</description>
        <externalId>true</externalId>
        <label>Identificador Único</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BAR_TXT_Identificador__c</fullName>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Baremo</label>
    <listViews>
        <fullName>Worten</fullName>
        <columns>NAME</columns>
        <columns>BAR_TXT_Identificador__c</columns>
        <columns>BAR_SEL_Gremio__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>BAR_LKP_Compania__c</columns>
        <columns>BAR_LKP_Agrupador_Baremo__c</columns>
        <columns>BAR_TXT_Descripcion_Corta__c</columns>
        <columns>BAR_TXT_Identificador_Unico__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BAR_LKP_Compania__c</field>
            <operation>equals</operation>
            <value>WORTEN</value>
        </filters>
        <label>Baremos de Worten</label>
        <language>es</language>
    </listViews>
    <nameField>
        <label>Nombre de Baremo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Baremos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>